--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@strapi/plugin-i18n": "4.5.4",
     "@strapi/plugin-users-permissions": "4.5.4",
+    "@strapi/provider-upload-cloudinary": "^4.9.1",
     "@strapi/strapi": "4.5.4",
     "mysql": "2.18.1",
     "pg": "^8.10.0"
